# rustdoc-llms

./: AGENTS.md  Cargo.toml  README.md  cspell.json  llms.json  llms.txt
docs/superpowers/plans/: 2026-04-27-comprehensive-docs.md
docs/superpowers/specs/: 2026-04-27-comprehensive-docs-design.md
examples/: README.md  basic-crate.md  copy-to-root.md  github-actions.md  publishing-workflow.md  troubleshooting.md  workspace.md
help/releasing/: index.md
src/: cargo_helpers.rs  main.rs
